--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/node": "^18.11.11",
     "css-loader": "^6.7.2",
     "html-webpack-plugin": "^5.5.0",
+    "sass": "^1.57.1",
+    "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
