chore: add dependency fork-ts-checker-webpack-plugin v8.0.0

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
   },
   "ts-node": {
     "compilerOptions": {
-      "module": "CommonJS"
+      "module": "CommonJS",
+      "esModuleInterop": true
     }
   },
   "include": ["src/**/*"]
