--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/node": "^18.11.11",
     "css-loader": "^6.7.2",
+    "fork-ts-checker-webpack-plugin": "^8.0.0",
     "html-webpack-plugin": "^5.5.0",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
